<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rutValidator.RutValidatorActivity">

    <TextView
        android:id="@+id/lbltitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="55dp"
        android:text="@string/rut_validator_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtRut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblRut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="96dp"
        android:text="@string/label_rut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtRut"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <EditText
        android:id="@+id/txtRut"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/rut_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnValidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblRut"
        app:layout_constraintTop_toBottomOf="@+id/lbltitle" />

    <Button
        android:id="@+id/btnValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="1dp"
        android:text="@string/btnValidate_display_name"
        app:layout_constraintBottom_toTopOf="@+id/frameResult"
        app:layout_constraintStart_toStartOf="@+id/txtRut"
        app:layout_constraintTop_toBottomOf="@+id/txtRut" />

    <FrameLayout
        android:id="@+id/frameResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnValidate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="322dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="183dp"
                android:stretchColumns="0,1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTitleResult">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/lblValidatedRut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rut Validado"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblValidatedRutResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="txtValidatedRutResult"
                        android:text="..." />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/lblRutState"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="Estado Rut"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblStateRutResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="txtStateRutResult"
                        android:text="..." />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/lblTitleResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:layout_marginBottom="58dp"
                android:text="Resultado"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>